--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Layout 01</title>
+	<title>Layout 02</title>
 	<link rel="stylesheet"  href="css/style.css">
 	
 </head>
 <body>
 	<div class="header"></div>
      
-	<div class="blog1 bg1">Logo</div>
+	<div class="blog1 bg1">Logo Navigation</div>
 
-	<div class="blog2 bg2">Navigation</div>
-	<div class="blog3 bg3">Header/Banner</div>
+	<div class="blog2 bg2">Header/Banner</div>
+	<div class="blog3 bg3">Intro text Area</div>
 
 	<div class="container">
-		<div class="blog4 bg4">Side Bar</div>
-		<div class="blog5 bg5">Body Area</div>
+		<div class="blog4 bg4">Box1</div>
+		<div class="blog4 bg4">Box2</div>
+		<div class="blog4 bg4">Box3</div>
 
 	</div>
 
